@@ -1,3 +1,13 @@
+2010-03-24  Miguel de Dios  <miguel.dedios@artica.es>
+
+	* include/functions_visual_map.php,
+	include/ajax/visual_console_builder.ajax.php,
+	godmode/reporting/visual_console_builder.preview.php,
+	godmode/reporting/visual_console_builder.php,
+	godmode/reporting/visual_console_builder.editor.php,
+	godmode/reporting/visual_console_builder.editor.js: worked about the new
+	visual console builder editor, now it is developing, don't afray.
+
 2010-03-24  Junichi Satoh  <junichi@rworks.jp>
 
 	* operation/snmpconsole/snmp_view.php: To follow timestamp setting,
